# any-translate

./: README.md  pyproject.toml
any_translate/: __init__.py  __main__.py
any_translate/cli/: __init__.py  commands.py
any_translate/models/: __init__.py  subtitle.py  translation.py
any_translate/services/: __init__.py  file_service.py  translation_service.py
any_translate/utils/: __init__.py  prompt.py  srt.py  timeout.py
